# atomCAD-bevy

./: Cargo.toml  README.md  env.zsh  index.html
assets/: manifest.json
crates/periodic-table/: Cargo.toml
crates/periodic-table/src/: lib.rs
src/: camera.rs  lib.rs  main.rs  menubar.rs  molecule_builder.rs  vsepr.rs
src/platform/: macos.rs  mod.rs  windows.rs
src/platform_impl/: mod.rs
src/platform_impl/macos/: menubar.rs  relaunch.rs
src/platform_impl/web/: menubar.rs
src/platform_impl/windows/: menubar.rs  mod.rs  relaunch.rs
