[package]
name = "atomcad"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>", "Mark Friedenbach <mark@friedenbach.org>"]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "0.2.7"
relaunch = "0.1.2"
winit = "0.28.2"
