[package]
name = "atomcad"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>", "Mark Friedenbach <mark@friedenbach.org>"]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.1"
bevy_egui = "0.20.3"
bevy_infinite_grid = "0.7.0"
objc = "0.2.7"
relaunch = "0.1.2"
winit = "0.28.2"
