[package]
name = "atomcad"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>", "Mark Friedenbach <mark@friedenbach.org>"]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.1"
bevy_egui = "0.20.3"
bevy_infinite_grid = "0.7.0"
eframe = { version = "0.21.3", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use wgpu for rendering.
]}
winit = "0.28.2"

# macOS
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

# native:
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
